[fix] search options overflow on mobile interfaces

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -32,6 +32,7 @@ input:focus {
 
 .App {
   font-family: 'Work Sans', sans-serif;
+  min-width: 360px;
 }
 
 h1 {
