--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -17,14 +17,14 @@
 
 .SearchBar-sort-options li {
   cursor: pointer;
-  width: 4.33rem;
+  width: 25%;
   border-bottom: 1px solid #fff;
-  padding: 0 2.58rem .33rem 2.58rem;
+  padding: 0 1rem .4rem 1rem;
   line-height: 1.13;
   text-align: center;
   font-weight: 600;
   font-size: .83rem;
-  transition: color .25s;
+  transition: color .5s;
 }
 
 .SearchBar-sort-options li:hover {
